1.第一次全部文件提交。 2.实现了“逐点校正”中的系数切换功能。 3.全局变量中添加了系数float* RK,RB,GK,GB,BK,BB. 4.全局变量添加了FacKind来表示当前是K还是B，还有FacRGB来表示当前使用的系数是那一数组。 5.float* getFacData(FacRGB frgb)；函数用来根据FacRGB获得系数数组。

--- a/miniLED_vs/miniled_vs.qrc
+++ b/miniLED_vs/miniled_vs.qrc
@@ -2,11 +2,20 @@
     <qresource prefix="/miniLED_vs">
         <file>myStyleSheet.qss</file>
         <file>CachedImage_1920_1080_POS3.jpg</file>
+        <file>QSS-master/ElegantDark.qss</file>
+        <file>pic/图片1.png</file>
+        <file>pic/图片2.png</file>
     </qresource>
     <qresource prefix="/pic">
         <file>pic/d1.png</file>
         <file>pic/d2.png</file>
         <file>pic/d3.png</file>
         <file>pic/d4.png</file>
+        <file>pic/1.png</file>
+        <file>pic/2.png</file>
+        <file>pic/3.png</file>
+        <file>pic/4.png</file>
+        <file>pic/5.png</file>
+        <file>pic/6.png</file>
     </qresource>
 </RCC>
