--- a/miniLED_vs/QSS-master/ElegantDark.qss
+++ b/miniLED_vs/QSS-master/ElegantDark.qss
@@ -217,3 +217,13 @@ QCheckBox::indicator:unchecked {
 QStatusBar {
 	color:rgb(240,240,240);
 }
+QGroupBox{
+	border: 1px solid #0A0A0A;
+	border-radius: 5px;
+	margin-top: 5px;
+}
+
+QGroupBox::title{
+	subcontrol-origin: margin;
+	padding: 0 3px;
+}
