1. 实现了单分区的一套流程。 2. 离线测试可以通过。 3. 要修改校正结果页。

--- a/miniLED_vs/QSS-master/ElegantDark.qss
+++ b/miniLED_vs/QSS-master/ElegantDark.qss
@@ -10,6 +10,10 @@ QMainWindow {
 }
 QWidget{
 	font-size: 14px;
+	
+}
+QFrame{
+	margin: 5px;
 }
 QTextEdit {
 	background-color:rgb(42, 42, 42);
@@ -88,14 +92,29 @@ QPushButton:disabled{
 	background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(57, 57, 57, 255), stop:1 rgba(77, 77, 77, 255));
 }
 QLineEdit {
-	border-width: 1px; border-radius: 4px;
+	border-width: 1px; border-radius: 2px;
 	border-color: rgb(58, 58, 58);
 	border-style: inset;
 	padding: 0 8px;
 	color: rgb(255, 255, 255);
-	background:rgb(100, 100, 100);
-	selection-background-color: rgb(187, 187, 187);
-	selection-color: rgb(60, 63, 65);
+	background:rgb(150, 150, 150);
+	selection-background-color: rgb(0, 0, 255);
+	selection-color: rgb(255,255,255);
+	height: 30px;
+	font-size:18px bold;
+	margin: 3px 3px;
+}
+QLineEdit:disabled{
+	border-width: 1px; border-radius: 2px;
+	border-color: rgb(58, 58, 58);
+	border-style: inset;
+	padding: 0 8px;
+	color: rgb(127, 127, 127);
+	background:rgb(58, 58, 58);
+	height: 30px;
+	font-size:18px bold;
+	margin: 3px 3px;
+
 }
 QLabel {
 	color:rgb(255,255,255);	
@@ -200,30 +219,41 @@ QCheckBox:hover {
 	border-color: rgb(87, 97, 106);
 	background-color:qlineargradient(spread:pad, x1:0.5, y1:0.7, x2:0.5, y2:0.3, stop:0 rgba(87, 97, 106, 150), stop:1 rgba(93, 103, 113, 150));
 }
-QCheckBox::indicator:checked {
-	border-radius:4px;
-	border-style:solid;
-	border-width:1px;
-	border-color: rgb(180,180,180);
-  	background-color:qlineargradient(spread:pad, x1:0.5, y1:0.7, x2:0.5, y2:0.3, stop:0 rgba(87, 97, 106, 255), stop:1 rgba(93, 103, 113, 255));
-}
 QCheckBox::indicator:unchecked {
+	image: url(:/pic/pic/switch_black_off.png);
+	width: 60px;
+	height: 40px;
+	/*
 	border-radius:4px;
 	border-style:solid;
 	border-width:1px;
 	border-color: rgb(87, 97, 106);
   	background-color:rgb(255,255,255);
+	*/
 }
+QCheckBox::indicator:checked {
+	image: url(:/pic/pic/switch_black_on.png);
+	width: 60px;
+	height: 40px;
+	/*
+	border-radius:4px;
+	border-style:solid;
+	border-width:1px;
+	border-color: rgb(180,180,180);
+  	background-color:qlineargradient(spread:pad, x1:0.5, y1:0.7, x2:0.5, y2:0.3, stop:0 rgba(87, 97, 106, 255), stop:1 rgba(93, 103, 113, 255));
+	*/
+}
+
 QStatusBar {
 	color:rgb(240,240,240);
 }
 QGroupBox{
 	border: 1px solid #0A0A0A;
 	border-radius: 5px;
-	margin-top: 5px;
+	margin-top:15px;
 }
 
 QGroupBox::title{
 	subcontrol-origin: margin;
-	padding: 0 3px;
+	padding: 10 3px;
 }
