--- a/miniLED_vs/QSS-master/ElegantDark.qss
+++ b/miniLED_vs/QSS-master/ElegantDark.qss
@@ -5,6 +5,7 @@ Company: GTRONICK
 Last updated: 17/04/2018
 Available at: https://github.com/GTRONICK/QSS/blob/master/ElegantDark.qss
 */
+
 QMainWindow {
 	background-color:rgb(82, 82, 82);
 }
@@ -13,7 +14,7 @@ QWidget{
 	
 }
 QFrame{
-	margin: 5px;
+	margin: 1px;
 }
 QTextEdit {
 	background-color:rgb(42, 42, 42);
@@ -220,6 +221,7 @@ QCheckBox:hover {
 	border-color: rgb(87, 97, 106);
 	background-color:qlineargradient(spread:pad, x1:0.5, y1:0.7, x2:0.5, y2:0.3, stop:0 rgba(87, 97, 106, 150), stop:1 rgba(93, 103, 113, 150));
 }
+
 QCheckBox::indicator:unchecked {
 	image: url(:/pic/pic/switch_black_off.png);
 	width: 60px;
@@ -244,6 +246,7 @@ QCheckBox::indicator:checked {
   	background-color:qlineargradient(spread:pad, x1:0.5, y1:0.7, x2:0.5, y2:0.3, stop:0 rgba(87, 97, 106, 255), stop:1 rgba(93, 103, 113, 255));
 	*/
 }
+
 QRadioButton::indicator:unchecked{
 	image: url(:/pic/pic/switch_off.png);
 	width: 23px;
@@ -278,17 +281,21 @@ QSlider::handle:horizontal {
     width: 13px;
     height: 13px;
 }
-
-
-QSlider::add-page:horizontal{
-    border: 1px solid #999999;
-    height: 8px;
-    background:background: qlineargradient(spread:pad, x1:0, y1:1, x2:0, y2:0, stop:0 rgba(27, 5, 27, 255), stop:0.25 rgba(99, 20, 102, 255), stop:0.5 rgba(154, 30, 158, 255), stop:1 rgba(173, 57, 176, 255));;
+QTableWidget{
+    border: inside;
+    background: #AAAAAA
 }
-
-QSlider::sub-page:horizontal{     
-                          
-    border: 1px solid #999999;
-    height: 8px;
-    background: background: qlineargradient(spread:pad, x1:0, y1:1, x2:0, y2:0, stop:0 rgba(27, 5, 27, 255), stop:0.25 rgba(99, 20, 102, 255), stop:0.5 rgba(154, 30, 158, 255), stop:1 rgba(173, 57, 176, 255));            
+QHeaderView{
+    background-color: transparent;
+    color: blue;
+    border-style:solid;
+    border: solid 5px;
+    
+}
+QHeaderView::section{
+    font-size: 14px;
+    background: #AAAAAA
+    min-height:25px;
+    min-width: 40px;
+    
 }
